--- a/generators/templates/component/test.tsx.hbs
+++ b/generators/templates/component/test.tsx.hbs
@@ -3,7 +3,7 @@ import { render, screen } from 'utils/tests';
 import { {{pascalCase name}} } from '.';
 
 describe('<{{pascalCase name}} />', () => {
-  it('should render the heading', () => {
+  it('should render correctly', () => {
     render(<{{pascalCase name}} />);
 
     expect(screen.getByRole('heading', { name: /{{pascalCase name}}/i })).toBeInTheDocument();
